Fixes z-index of the legend pane content

--- a/app/assets/stylesheets/table/table_panel.css.scss
+++ b/app/assets/stylesheets/table/table_panel.css.scss
@@ -679,8 +679,7 @@ a.info {
     .panel_content .wrapper .content .fields {
       position:relative;
       background:#fff;
-      z-index: 100;
-
+      z-index: 1000;
     }
 
     div.forms {
